<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="500dp"
            android:background="@drawable/back_results"
            android:src="@drawable/img_8"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="250dp"
            android:background="@drawable/back_settings">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="180dp"
                android:background="@drawable/back_results">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoSizeTextType="uniform"
                    android:paddingHorizontal="3dp"
                    android:paddingVertical="5dp"
                    android:text="@string/question"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/back_results">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoSizeMaxTextSize="25dp"
                    android:autoSizeMinTextSize="10dp"
                    android:autoSizeTextType="uniform"
                    android:paddingVertical="40dp"
                    android:text="@string/question3"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="500dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:src="@drawable/img_4" />

            <TextView
                android:id="@+id/incisoB3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="155dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="155dp"
                android:layout_marginBottom="45dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/back_results"
                android:padding="5dp"
                android:text="@string/Binciso3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/incisoC3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="280dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="45dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/back_results"
                android:padding="5dp"
                android:text="@string/Cinciso3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/incisoA3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="280dp"
                android:layout_marginBottom="45dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/back_results"
                android:padding="5dp"
                android:text="@string/Ainciso3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </RelativeLayout>
    </RelativeLayout>
</layout>